Kmonad - Add config as backup
Related - https://github.com/39aldo39/klfc/issues/39

Also enable tap to click in rldkbd and fix dual-role comments in klfc config.

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -7510,7 +7510,9 @@ TODO
 ** Kmonad
 #+begin_src emacs-lisp
 (use-package kbd-mode
-  :straight (kbd-mode :host github :repo "kmonad/kbd-mode"))
+  :straight (kbd-mode :host github :repo "kmonad/kbd-mode")
+  :config
+  (put 'deflayer 'lisp-indent-function 'defun))
 #+end_src
 
 ** Lua
